--- a/src/components/ProfileCard/ProfileCard.css
+++ b/src/components/ProfileCard/ProfileCard.css
@@ -4,6 +4,8 @@
     flex-direction: column;
     position: relative;
     gap: 1rem;
+    overflow-x: clip;
+    background: var(--cardColor);
 }
 
 .profileImages {
@@ -36,4 +38,57 @@
 
 .profileName>span:nth-of-type(1) {
     font-weight: bold;
+}
+
+
+
+.folowStatus {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 0.75rem;
+}
+
+.folowStatus>hr {
+    width: 85%;
+    border: 1px solid var(--hrColor);
+}
+
+.folowStatus>div {
+    display: flex;
+    gap: 1rem;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.follow {
+    display: flex;
+    flex-direction: column;
+    gap: 0.4rem;
+    align-items: center;
+    justify-content: center;
+}
+
+.follow>span:nth-of-type(1) {
+    font-weight: bold;
+}
+
+.follow>span:nth-of-type(2) {
+    color: var(--gray);
+    font-size: 13px;
+}
+
+.vl {
+    height: 150%;
+    border-left: 2px solid var(--hrColor);
+}
+
+
+.profileCard>span {
+    font-weight: bold;
+    color: orange;
+    align-self: center;
+    margin-bottom: 1rem;
+    cursor: pointer;
 }
