--- a/src/components/PostShare/PostShare.css
+++ b/src/components/PostShare/PostShare.css
@@ -52,3 +52,10 @@
 .schedule {
     font-size: 23px;
 }
+
+.ps-button {
+    padding: 5px;
+    padding-left: 20px;
+    padding-right: 20px;
+    font-size: 12px;
+}
