post container done

--- a/src/components/Post/Post.css
+++ b/src/components/Post/Post.css
@@ -13,3 +13,9 @@
     object-fit: cover;
     border-radius: 0.5rem;
 }
+
+.postReact {
+    display: flex;
+    align-items: flex-start;
+    gap: 1.5rem;
+}
