--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -4,3 +4,9 @@
     grid-template-columns: 25rem auto 27rem;
     gap: 1rem;
 }
+
+.profileCenter {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
