--- a/src/pages/Auth/Auth.css
+++ b/src/pages/Auth/Auth.css
@@ -54,3 +54,28 @@
     padding: 20px;
     flex: 1;
 }
+
+.info-form>div {
+    display: flex;
+    gap: 1rem;
+    height: 2rem;
+    width: 90%;
+}
+
+.infoButton {
+    width: 6rem;
+    height: 2rem;
+    align-self: flex-end;
+}
+
+.authForm {
+    background-color: var(--cardColor);
+    border-radius: 1rem;
+    padding: 1rem;
+}
+
+.authForm>div {
+    width: 100%;
+    align-items: center;
+    justify-content: center;
+}
