login form done

--- a/src/pages/Auth/Auth.css
+++ b/src/pages/Auth/Auth.css
@@ -79,3 +79,9 @@
     align-items: center;
     justify-content: center;
 }
+
+.authFormLogin {
+    background-color: var(--cardColor);
+    border-radius: 1rem;
+    padding: 70px;
+}
